--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "taro-ui": "^1.5.4"
+    "taro-ui": "^2.0.0-beta.2"
   },
   "devDependencies": {
     "@types/react": "^16.4.8",
