--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 	"description": "ltz ",
 	"appid": "touristappid",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": false,
 		"postcss": false,
 		"minified": false,
